--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
      </div>
  
      <ul class="nav-links">
-       <li class="link"><a href="#">Home</a></li>
+       <li class="link"><a href="#">Accueil</a></li>
        <li class="link"><a href="#">Features</a></li>
        <li class="link"><a href="#">Pricing</a></li>
-       <li class="link"><a href="#">About</a></li>
+       <li class="link"><a href="#">À propos</a></li>
      </ul>
      <button class="btn">Hire Me</button>
    </nav>
@@ -33,7 +33,7 @@
        <h4>CREATE A SITE LIKE A PRO</h4>
        <H1>Hi, I'm <span>Aya</span>, Web Developer</H1>
        <p>
-         Welcome to my portfolio. Here, I share my projects, combining thoughtful design with purposeful development. I create modern web pages with passion, exploring tools like HTML, JavaScript, and CSS. My goal: to turn simple ideas into useful and elegant digital experiences."
+        Bienvenue sur mon portfolio. Ici, je partage mes projets, en combinant un design réfléchi avec un développement ciblé. Je crée des pages web modernes avec passion, en explorant des outils comme HTML, JavaScript et CSS. Mon objectif : transformer des idées simples en expériences digitales utiles et élégantes.
        </p>
        <button class="btn">Get started</button>
      </div>
@@ -48,13 +48,19 @@
          <h2>Aya</h2>
        </div>
        <div class="footer-links">
-         <a href="http://127.0.0.1:3000/python/index.html#">À propos</a>
-         <a href="#">Contact</a>
+         <a href="#">À propos de moi</a>
+         <a href="#">Mentions légales</a>
          <a href="#">R.C.U</a>
+       </div>
+
+       <div class="footer-thanks">
+        <p>
+          Merci de votre visite
+        </p>
        </div>
      </div>
      <div class="footer-bottom">
-       © 2025 Aya. Tous droits réservés.
+       &copy; 2025 Aya. Tous droits réservés.
      </div>
    </footer>
    
