--- a/index.html
+++ b/index.html
@@ -1,72 +1,60 @@
 <!DOCTYPE html>
- <html lang="en">
+ <html lang="fr">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
    <link rel="stylesheet" href="style.css">
    <link rel="icon" href="logo-transparent.png" >
    <title>Personal Portfolio | Aya EL Mataoui</title>
  </head>
  
  <body>
- 
-   <nav>
-     <div class="nav-logo">
-       <a href="#">
-         <img src="logo.png" alt="">
-       </a>
-     </div>
- 
-     <ul class="nav-links">
-       <li class="link"><a href="#">Accueil</a></li>
-       <li class="link"><a href="#">Features</a></li>
-       <li class="link"><a href="#">Pricing</a></li>
-       <li class="link"><a href="#">À propos</a></li>
-     </ul>
-     <button class="btn">Hire Me</button>
-   </nav>
- 
-   <header class="container">
-     <div class="content">
-       <span class="blur"></span>
-       <span class="blur"></span>
-       <h4>CREATE A SITE LIKE A PRO</h4>
-       <H1>Hi, I'm <span>Aya</span>, Web Developer</H1>
-       <p>
-        Bienvenue sur mon portfolio. Ici, je partage mes projets, en combinant un design réfléchi avec un développement ciblé. Je crée des pages web modernes avec passion, en explorant des outils comme HTML, JavaScript et CSS. Mon objectif : transformer des idées simples en expériences digitales utiles et élégantes.
-       </p>
-       <button class="btn">Get started</button>
-     </div>
-     <div class="image">
-       <img src="header.png">
-     </div>
-   </header>
-  
-   <footer class="footer">
-     <div class="footer-container">
-       <div class="footer-brand">
-         <h2>Aya</h2>
-       </div>
-       <div class="footer-links">
-         <a href="#">À propos de moi</a>
-         <a href="#">Mentions légales</a>
-         <a href="#">R.C.U</a>
-       </div>
 
-       <div class="footer-thanks">
-        <p>
-          Merci de votre visite
-        </p>
-       </div>
-     </div>
-     <div class="footer-bottom">
-       &copy; 2025 Aya. Tous droits réservés.
-     </div>
-   </footer>
-   
- 
- 
-   <script src="script.js"></script>
+<nav>
+  <h2>Mon Portfolio</h2>
+</nav>
+
+<div class="main-section">
+
+  <div class="container">
+    <h2>Hey, je suis Aya</h2>
+    
+    <p>
+      Je m'appelle Aya, et j'utilise plusieurs outils comme HTML, CSS et JavaScript pour réaliser des projets comme ce site web. Ce portfolio est donc un apreçu de mon univers: entre code, créativité et ambition.
+    </p>
+  </div>
+
+  <div class="prog">
+    <img src="prog.png">
+  </div>
+
+</div> 
+
+<footer>
+  <div class="brand-name">
+    <h2>Aya</h2>
+  </div>
+
+  <div class="links">
+    <a href="https://aya-code-creator.github.io/Mentions-legales/">Mentions légales</a>
+  </div>
+  
+  <div class="thanks">
+    <p>Merci de votre visite</p>
+  </div>
+
+  <div class="logos">
+    <p>Réalisé avec</p>
+    <img src="html5.png" title="HTML">
+    <img src="css.png" title="CSS">
+    <img src="visual-basic.png" title="VScode">
+    <img src="github.png" title="GithubPages">
+  </div>
+
+  <div class="copyright">
+    <p>&copy;2025 Aya. Tous drois réservés</p>
+  </div>
+</footer>
+
  </body>
  </html>
