--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="main-section">
 
   <div class="container">
-    <h2>Hey, je suis Aya</h2>
+    <h2>Hey, je suis Aya 👋</h2>
     
     <p>
       Je m'appelle Aya, et j'utilise plusieurs outils comme HTML, CSS et JavaScript pour réaliser des projets comme ce site web. Ce portfolio est donc un apreçu de mon univers: entre code, créativité et ambition.
