--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Portfolio de Aya EL Mataoui, jeune développeuse web créative.">
    <link rel="stylesheet" href="style.css">
    <link rel="icon" href="logo-transparent.png" >
    <title>Personal Portfolio | Aya EL Mataoui</title>
@@ -11,21 +12,21 @@
  <body>
 
 <nav>
-  <h2>Mon Portfolio</h2>
+  <h2 class="floating-text">Mon Portfolio</h2>
 </nav>
 
 <div class="main-section">
 
   <div class="container">
-    <h2>Hey, je suis Aya 👋</h2>
+    <h2>Hey, je suis <span class="mot-special">Aya</span> 👋</h2>
     
     <p>
-      Je m'appelle Aya, et j'utilise plusieurs outils comme HTML, CSS et JavaScript pour réaliser des projets comme ce site web. Ce portfolio est donc un apreçu de mon univers: entre code, créativité et ambition.
+      Je m'appelle Aya, et j'utilise plusieurs outils comme HTML, CSS et JavaScript pour réaliser des projets comme ce site web. Ce portfolio est donc un aperçu de mon univers: entre code, créativité et ambition.
     </p>
   </div>
 
-  <div class="prog">
-    <img src="prog.png">
+  <div class="prog img">
+    <img class="floating-image" src="prog.png">
   </div>
 
 </div> 
@@ -52,7 +53,7 @@
   </div>
 
   <div class="copyright">
-    <p>&copy;2025 Aya. Tous drois réservés</p>
+    <p>&copy;2025 Aya. Tous droits réservés</p>
   </div>
 </footer>
 
