--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="links">
-    <a href="https://aya-code-creator.github.io/Mentions-legales/">Mentions légales</a>
+    <a href="https://link-aya.github.io/Mentions-legales/">Mentions légales</a>
   </div>
   
   <div class="thanks">
